# python-tic-tac-toe

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
ai/: template.py
game_ai/: advanced.py  beginner.py
tests/: test_ai_adv.py  test_board.py
tic_tac_toe/: board.py  errors.py  main.py  term.py  util.py
